--- a/index2.html
+++ b/index2.html
@@ -55,12 +55,20 @@ body{ margin:0; color:var(--txt); font-family:system-ui,-apple-system,Segoe UI,R
 
 /* KROPLA */
 .logo-zone{ position:fixed; top:72px; left:50%; transform:translateX(-50%);
-  width:min(76vw,380px); aspect-ratio:2/3; z-index:2000; filter: drop-shadow(0 10px 20px rgba(0,0,0,.6)); }
+  width:min(76vw,380px); aspect-ratio:2/3; z-index:2000; filter: drop-shadow(0 10px 20px rgba(0,0,0,.6));
+  cursor:pointer; /* pewny wskaźnik klikalności */ }
 .logo-img{ position:absolute; inset:0; width:100%; height:100%; object-fit:contain;
   mix-blend-mode:screen; filter:saturate(1.08) contrast(1.06); transition:filter .25s ease, transform .25s ease; }
 .recording .logo-img{ filter:saturate(1.2) contrast(1.14) brightness(1.08); transform:scale(1.01); }
 @keyframes recordPulse{ 0%,100%{ transform:translateX(-50%) scale(1)} 50%{ transform:translateX(-50%) scale(1.012)} }
 .recording .logo-zone{ animation:recordPulse 1.8s ease-in-out infinite; }
+
+/* dodatkowe pulsowanie bezpośrednio na obrazku, pewny efekt */
+@keyframes imgPulse {
+  0%,100% { filter: saturate(1.20) contrast(1.14) brightness(1.08); transform: scale(1.01); }
+  50%     { filter: saturate(1.28) contrast(1.18) brightness(1.12); transform: scale(1.02); }
+}
+.recording .logo-img{ animation: imgPulse 1.6s ease-in-out infinite; }
 
 .droplet{ position:absolute; inset:0; -webkit-mask-image:var(--logo-url); mask-image:var(--logo-url);
   -webkit-mask-repeat:no-repeat; mask-repeat:no-repeat; -webkit-mask-position:center; mask-position:center;
@@ -127,9 +135,9 @@ body{ margin:0; color:var(--txt); font-family:system-ui,-apple-system,Segoe UI,R
   <div id="audioToast" class="toast">🔊 Stuknij, aby odtworzyć komunikat</div>
 
   <!-- KROPLA -->
-  <div class="logo-zone" id="logoZone" onclick="toggleVoice()">
+  <div class="logo-zone" id="logoZone" role="button" tabindex="0">
     <img class="logo-img" src="https://raw.githubusercontent.com/ndoemo02/Freeflo/main/Freeflow-logo.png" alt="FreeFlow logo">
-    <div class="droplet"></div>
+    <div class="droplet" id="logoHit"></div>
     <div class="wave"></div>
   </div>
 
@@ -146,7 +154,7 @@ body{ margin:0; color:var(--txt); font-family:system-ui,-apple-system,Segoe UI,R
 <script>
 /* ============================ KONFIG ============================ */
 let cart = 0, recording = false, introSpoken = false;
-const ASR_URL = 'https://freeflow-backend-vercel.vercel.app/api/asr';  // <— URL Vercel
+const ASR_URL = 'https://freeflow-backend-vercel.vercel.app/api/asr';  // URL Vercel
 const CHUNK_MS = 4000;
 
 /* ============================ UI ============================ */
@@ -260,10 +268,14 @@ function stopRecording(){
 }
 
 function toggleVoice(){
+  const wasRecording = recording;
+  appendTranscript('asst', `Przełączanie nagrywania: ${wasRecording ? 'ON→OFF' : 'OFF→ON'}`);
+
   if(!introSpoken){ sayIntro(); }
   recording = !recording;
   document.body.classList.toggle('recording', recording);
   document.body.classList.add('clicked'); setTimeout(()=>document.body.classList.remove('clicked'), 500);
+
   if(recording){
     appendTranscript('asst','Nagrywanie włączone. Słucham.');
     speak('Nagrywanie włączone. Słucham.');
@@ -274,6 +286,24 @@ function toggleVoice(){
     stopRecording();
   }
 }
+
+/* --- Pewne podpięcie klików do logo --- */
+(function ensureLogoClicks(){
+  const zone = document.getElementById('logoZone');
+  const hit  = document.getElementById('logoHit');
+  function onToggle(e){
+    e.preventDefault(); e.stopPropagation();
+    appendTranscript('asst', 'Klik na logo wykryty.');
+    toggleVoice();
+  }
+  ['click','touchstart'].forEach(ev => {
+    zone.addEventListener(ev, onToggle, {passive:true});
+    if (hit) hit.addEventListener(ev, onToggle, {passive:true});
+  });
+  zone.addEventListener('keydown', (e)=>{
+    if(e.key === 'Enter' || e.key === ' ') { onToggle(e); }
+  });
+})();
 
 /* ============================ TTS ============================ */
 function speakAndLog(text){ appendTranscript('asst', text); speak(text); }
