--- a/index2.html
+++ b/index2.html
@@ -3,193 +3,243 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>FreeFlow</title>
+<title>FreeFlow — index2</title>
 <style>
   :root{
-    --bg:#0c0f14;
-    --panel:rgba(22,24,32,.72);
-    --panel-border:rgba(255,255,255,.08);
-    --text:#e8eef8;
-    --accent:#ff9c2f;
+    --txt:#e8eef8; --muted:#cfd3dc; --accent:#ff9c2f;
+    --bg-url:url("./Background.png");
+    --logo-url:url("./Freeflow-logo.png");
+    --transcriptOffset: 96px; /* odstęp transkrypcji od kropli */
   }
-  html,body{height:100%;margin:0;background:#0c0f14;color:var(--text);font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial}
-  body::before{
-    content:""; position:fixed; inset:0;
-    background:url("./background.png") center/cover no-repeat fixed;
-    opacity:.75; pointer-events:none; z-index:-2;
-  }
-  body::after{
-    content:""; position:fixed; inset:0;
-    background:radial-gradient(transparent 30%, rgba(0,0,0,.55) 100%);
-    pointer-events:none; z-index:-1;
+  *{box-sizing:border-box;-webkit-tap-highlight-color:transparent}
+  html,body{height:100%}
+  body{ margin:0; color:var(--txt); font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;
+        background:#0c0f14; overflow-x:hidden; }
+
+  /* TŁO */
+  .bg{ position:fixed; inset:0; z-index:0; background-image:var(--bg-url); background-size:cover; background-position:center; }
+  .bg::before{ content:""; position:absolute; inset:0;
+    background: radial-gradient(1100px 700px at 50% 18%, rgba(10,10,16,.20), rgba(10,10,16,.44)),
+                linear-gradient(180deg, rgba(10,10,16,.06), rgba(10,10,16,.26)); }
+  .bg::after{ content:""; position:absolute; inset:0; opacity:.02; pointer-events:none;
+    background-image: radial-gradient(currentColor 1px, transparent 1px); background-size:3px 3px; }
+
+  /* TOPBAR (lekki, nie zmienia logiki) */
+  .topbar{ position:fixed; inset:0 0 auto 0; height:56px; z-index:3000;
+    display:flex; align-items:center; justify-content:space-between; padding:0 12px;
+    background:linear-gradient(180deg, rgba(6,8,12,.88), rgba(6,8,12,.42)); border-bottom:1px solid rgba(255,255,255,.06); }
+  .brand{ font-weight:800; text-transform:uppercase; letter-spacing:.12em; }
+  .top-actions{ display:flex; gap:8px; }
+  .icon-btn{ height:36px; min-width:40px; padding:0 10px; border:1px solid rgba(255,255,255,.18);
+    border-radius:12px; background:rgba(255,255,255,.06); color:var(--txt); font-size:18px; cursor:pointer; }
+  .icon-btn:active{ transform:translateY(1px) }
+  .badge{ font-size:12px; background:var(--accent); color:#1a1a1a; padding:1px 6px; border-radius:999px; margin-left:4px; }
+
+  /* KROPLA — przycisk (bez zmian eventów po Twojej stronie) */
+  .logo-zone{ position:fixed; top:72px; left:50%; transform:translateX(-50%);
+    width:min(76vw,380px); aspect-ratio:2/3; z-index:2000; cursor:pointer;
+    filter: drop-shadow(0 10px 20px rgba(0,0,0,.6)); }
+  .logo-img{ position:absolute; inset:0; width:100%; height:100%; object-fit:contain;
+    mix-blend-mode:screen; filter:saturate(1.08) contrast(1.06); transition:filter .25s ease, transform .25s ease; }
+  .recording .logo-img{ filter:saturate(1.2) contrast(1.14) brightness(1.08); transform:scale(1.01); }
+
+  /* NEONOWY, WYRAŹNY PULS WOKÓŁ KROPLI (włącza się gdy jest nagrywanie)
+     Działa gdy:
+        - <body> ma klasę .recording    LUB
+        - .logo-zone ma klasę .listening
+     Nie modyfikuje JS – tylko reaguje na istniejące klasy.
+  */
+  .logo-neon{position:absolute; inset:-7%; pointer-events:none; border-radius:40% 40% 56% 56% / 44% 44% 60% 60%; opacity:0; }
+  .recording .logo-neon, .logo-zone.listening .logo-neon{ opacity:1; animation:neonPulse 1.35s ease-in-out infinite; }
+  @keyframes neonPulse{
+    0%{
+      box-shadow:
+        0 0 10px 4px rgba(255,156,47,.60),
+        0 0 26px 8px rgba(255,156,47,.35),
+        inset 0 0 10px rgba(255,156,47,.22);
+      transform:scale(1);
+      filter:saturate(1);
+    }
+    50%{
+      box-shadow:
+        0 0 18px 8px rgba(255,156,47,.75),
+        0 0 44px 16px rgba(255,156,47,.40),
+        inset 0 0 16px rgba(255,156,47,.28);
+      transform:scale(1.03);
+      filter:saturate(1.15);
+    }
+    100%{
+      box-shadow:
+        0 0 10px 4px rgba(255,156,47,.60),
+        0 0 26px 8px rgba(255,156,47,.35),
+        inset 0 0 10px rgba(255,156,47,.22);
+      transform:scale(1);
+      filter:saturate(1);
+    }
   }
 
-  header{
-    display:flex; align-items:center; justify-content:space-between;
-    padding:12px 16px; background:linear-gradient(180deg, rgba(0,0,0,.65), rgba(0,0,0,0));
-    position:sticky; top:0; z-index:20; backdrop-filter:saturate(140%) blur(6px);
+  /* Delikatna praca obrazka podczas nagrywania (niezależnie od JS) */
+  @keyframes imgBreathe {
+    0%,100% { transform: scale(1);   filter: saturate(1.05) contrast(1.06) brightness(1.02); }
+    50%     { transform: scale(1.01); filter: saturate(1.18) contrast(1.12) brightness(1.06); }
   }
-  .brand{letter-spacing:.24em; font-weight:800}
-  .actions{display:flex; gap:10px}
-  .btn-ghost{
-    display:grid; place-items:center; width:44px; height:44px; border-radius:12px;
-    background:rgba(255,255,255,.06); border:1px solid var(--panel-border);
-  }
+  .recording .logo-img, .logo-zone.listening .logo-img{ animation: imgBreathe 1.35s ease-in-out infinite; }
 
-  main{max-width:960px; margin:0 auto; padding:24px 16px 120px}
-
-  /* Logo – przycisk */
-  #logoBtn{
-    width:min(76vw,380px); aspect-ratio:0.82/1;
-    margin:24px auto 14px; display:block; border:0; background:transparent; cursor:pointer;
-    position:relative; transform:translateZ(0);
-  }
-  #logoBtn img{
-    width:100%; height:100%; object-fit:contain; display:block;
-    filter:drop-shadow(0 14px 26px rgba(0,0,0,.45));
-    transition:transform .15s ease;
-  }
-  #logoBtn:active img{ transform:scale(.985) }
-
-  /* Neon puls */
-  #logoBtn.listening img {
-    animation: neonPulse 1.6s ease-in-out infinite;
-  }
-  @keyframes neonPulse {
-    0%   { filter: drop-shadow(0 0 6px var(--accent)) drop-shadow(0 0 14px var(--accent)); }
-    50%  { filter: drop-shadow(0 0 18px var(--accent)) drop-shadow(0 0 36px var(--accent)); }
-    100% { filter: drop-shadow(0 0 6px var(--accent)) drop-shadow(0 0 14px var(--accent)); }
-  }
-
-  #transcript{
-    max-width:720px; margin:18px auto 0; padding:14px 16px;
-    background:var(--panel); border:1px solid var(--panel-border); border-radius:14px;
+  /* TRANSKRYPCJA — niżej i na środku; wspieramy różne nazwy kontenerów */
+  .transcript, #transcript, .transcriptBox{
+    position:fixed; left:50%; transform:translateX(-50%);
+    top: calc(72px + min(76vw,380px) + var(--transcriptOffset));
+    width:min(94vw, 720px); max-height:38vh; overflow:auto;
+    background: rgba(22,24,32,.72); border:1px solid rgba(255,255,255,.08);
+    border-radius:14px; padding:12px 14px; z-index:2100;
     box-shadow:0 10px 30px rgba(0,0,0,.25);
-    min-height:72px; max-height:38vh; overflow:auto;
   }
-  #transcript p{margin:6px 0}
-  #transcript p strong{color:#9ed0ff}
+  .transcript .line, #transcript .line, .transcriptBox .line{ display:flex; gap:8px; margin:4px 0; align-items:flex-start; }
+  .role{ opacity:.72; min-width:84px; font-weight:700; font-size:13px; color:var(--muted); }
+  .text{ flex:1; font-size:14px; line-height:1.35 }
 
-  .dock{
-    position:fixed; left:0; right:0; bottom:18px; display:flex; justify-content:center; z-index:15;
-  }
-  .dock-inner{
-    display:flex; gap:14px; padding:14px 16px; border-radius:18px;
-    background:rgba(10,12,18,.78); border:1px solid var(--panel-border);
-    backdrop-filter:blur(8px) saturate(140%);
-  }
-  .chip{
-    display:flex; align-items:center; gap:10px; padding:12px 16px; border-radius:16px;
-    background:rgba(255,255,255,.06); border:1px solid var(--panel-border);
-    color:var(--text); font-weight:600;
-  }
+  /* DÓŁ – kapsułki */
+  .bottom-bar{ position:fixed; left:50%; transform:translateX(-50%); bottom:14px; z-index:2200;
+    display:flex; gap:10px; padding:6px; background:rgba(10,10,16,.35); border:1px solid rgba(255,255,255,.12); border-radius:16px; }
+  .pill{ display:flex; align-items:center; gap:8px; border:1px solid rgba(255,255,255,.14);
+    border-radius:999px; padding:10px 14px; font-weight:700; cursor:pointer; background:rgba(255,255,255,.08); color:#fff; }
+  .pill .ico{ font-size:18px; opacity:.95 } .pill:active{ transform:translateY(1px) }
 
-  a,button{color:inherit}
-  *{box-sizing:border-box}
+  @media (max-width:400px){ .logo-zone{width:78vw} .transcript{width:94vw} .pill{padding:10px 12px; font-size:15px} }
 </style>
 </head>
 <body>
+  <!-- TŁO -->
+  <div class="bg" aria-hidden="true"></div>
 
-<header>
-  <div class="brand">FREEFLOW</div>
-  <div class="actions">
-    <div class="btn-ghost" aria-label="Menu">☰</div>
-    <div class="btn-ghost" aria-label="Koszyk">🛒</div>
+  <!-- GÓRA (lekko) -->
+  <header class="topbar">
+    <div class="brand">FREEFLOW</div>
+    <nav class="top-actions">
+      <button class="icon-btn" aria-label="Menu">☰</button>
+      <button class="icon-btn" aria-label="Koszyk">🛒 <span class="badge" id="cartCount">0</span></button>
+    </nav>
+  </header>
+
+  <!-- KROPLA (nie dotykamy Twojej logiki JS: klik i toggle masz po swojej stronie)
+       Jeśli Twoja logika nasłuchuje innego selektora – zostaw .logo-zone,
+       a tryb nagrywania włącza neon poprzez .recording na body albo .listening na logo.
+  -->
+  <div class="logo-zone" id="logoBtn" role="button" tabindex="0">
+    <img class="logo-img" src="./Freeflow-logo.png" alt="FreeFlow logo">
+    <div class="logo-neon"></div>
   </div>
-</header>
 
-<main>
-  <button id="logoBtn" aria-label="Click to talk">
-    <img src="./Freeflow-logo.png" alt="FreeFlow Logo" />
-  </button>
-  <div id="transcript" aria-live="polite" aria-label="Transkrypcja"></div>
-</main>
+  <!-- TRANSKRYPCJA (używamy Twojego istniejącego kontenera, jeżeli masz inny – CSS wspiera kilka nazw) -->
+  <div class="transcript" id="transcript" aria-live="polite"></div>
 
-<div class="dock">
-  <div class="dock-inner">
-    <a class="chip" href="#food">🍽️ Jedzenie</a>
-    <a class="chip" href="#taxi">🚕 Taxi</a>
-    <a class="chip" href="#hotel">🏨 Hotel</a>
+  <!-- DÓŁ – guziki skrótów (bez zmiany logiki) -->
+  <div class="bottom-bar">
+    <button class="pill" id="btnFood"><span class="ico">🍽️</span><span>Jedzenie</span></button>
+    <button class="pill" id="btnTaxi"><span class="ico">🚕</span><span>Taxi</span></button>
+    <button class="pill" id="btnHotel"><span class="ico">🏨</span><span>Hotel</span></button>
   </div>
-</div>
 
 <script>
+/* ================== KONFIG ================== */
 const BACKEND = 'https://freeflow-backend-vercel.vercel.app';
+const ASR_URL = `${BACKEND}/api/asr`;  // zostawiamy /api/asr — nic nie zmieniasz w backendzie
+const CHUNK_MS = 4000;
 
-function addLine(text, who="Asystent"){
+/* ========== Pomocnicze UI do transkrypcji (bez zmiany Twojej logiki) ========== */
+function appendTranscript(role, text){
   const box = document.getElementById('transcript');
-  const p = document.createElement('p');
-  if (who) p.innerHTML = `<strong>${who}:</strong> ${text}`;
-  else p.textContent = text;
-  box.appendChild(p);
-  box.scrollTop = box.scrollHeight;
+  if(!box) return;
+  const line = document.createElement('div'); line.className='line';
+  const r = document.createElement('div'); r.className='role'; r.textContent = role==='user'?'Ty:':'Asystent:';
+  const t = document.createElement('div'); t.className='text'; t.textContent = text;
+  line.append(r,t); box.append(line); box.scrollTop = box.scrollHeight;
 }
 
-async function speak(text){
-  try{
-    const r = await fetch(`${BACKEND}/api/tts`, {
-      method:'POST', headers:{'Content-Type':'application/json'},
-      body:JSON.stringify({ text })
-    });
-    const blob = await r.blob();
-    const url = URL.createObjectURL(blob);
-    const a = new Audio(url); a.play();
-  }catch(e){ console.error('TTS error', e); }
+/* ========== TRYB NAGRYWANIA — bez ingerencji w Twoje istniejące eventy ==========
+   Jeżeli Twój kod już przełącza nagrywanie i dodaje klasę .recording na <body> lub .listening na .logo-zone,
+   neon i puls włączą się automatycznie przez sam CSS.
+   Poniżej zostawiamy minimalistyczny fallback, który możesz USUNĄĆ, jeśli masz własną obsługę.
+*/
+let recording = false, mr = null, stream = null, mime = null;
+async function fallbackToggle(){
+  // fallback tylko gdy nie masz własnej logiki – w innym wypadku usuń tę funkcję
+  recording = !recording;
+  document.body.classList.toggle('recording', recording);
+  if(recording){ startRecording().catch(()=>{}); appendTranscript('asst','Nagrywanie włączone (fallback).'); }
+  else{ stopRecording(); appendTranscript('asst','Nagrywanie wyłączone (fallback).'); }
 }
 
-async function serverTranscribe(blob){
-  try{
-    const fd = new FormData();
-    fd.append('audio', blob, 'audio.webm');
-    const r = await fetch(`${BACKEND}/api/asr`, { method:'POST', body:fd });
-    const j = await r.json().catch(()=> ({}));
-    return j.text || j.transcript || "";
-  }catch(e){ console.error('ASR error', e); return ""; }
-}
-
-let mediaRecorder, isRecording=false, chunks=[];
+/* ========== Serwerowa transkrypcja (MediaRecorder → /api/asr) ========== */
 async function startRecording(){
-  const stream = await navigator.mediaDevices.getUserMedia({ audio:true });
-  mediaRecorder = new MediaRecorder(stream, { mimeType:'audio/webm' });
-  chunks = [];
-  mediaRecorder.ondataavailable = (e)=> e.data.size && chunks.push(e.data);
-  mediaRecorder.onstop = async ()=>{
-    const blob = new Blob(chunks, { type:'audio/webm' });
-    const text = await serverTranscribe(blob);
-    if(text){
-      addLine(text, "Użytkownik");
-      const reply = "Zrozumiałam: " + text;
-      addLine(reply, "Asystent");
-      speak(reply);
-    }else{
-      addLine('Nie udało się rozpoznać mowy.', "Asystent");
+  try{
+    stream = await navigator.mediaDevices.getUserMedia({audio:true});
+  }catch(err){
+    appendTranscript('asst','Brak dostępu do mikrofonu.');
+    throw err;
+  }
+  if(MediaRecorder.isTypeSupported('audio/webm;codecs=opus')) mime = 'audio/webm;codecs=opus';
+  else if(MediaRecorder.isTypeSupported('audio/ogg;codecs=opus')) mime = 'audio/ogg;codecs=opus';
+  else if(MediaRecorder.isTypeSupported('audio/webm')) mime = 'audio/webm';
+  else { appendTranscript('asst','MediaRecorder nieobsługiwany.'); throw new Error('no-mime'); }
+
+  mr = new MediaRecorder(stream, {mimeType: mime});
+  mr.ondataavailable = async (e)=>{
+    if(!e.data || e.data.size === 0) return;
+    try{
+      const fd = new FormData();
+      fd.append('audio', e.data, `chunk.${mime.includes('ogg')?'ogg':'webm'}`);
+      const res = await fetch(ASR_URL, { method:'POST', body: fd });
+
+      if(!res.ok){
+        const msg = await res.text().catch(()=>res.statusText);
+        appendTranscript('asst', `ASR HTTP ${res.status}: ${msg}`);
+        return;
+      }
+
+      let text = '';
+      const ct = res.headers.get('content-type') || '';
+      if (ct.includes('application/json')) {
+        const json = await res.json();
+        text = (json && (json.text || json.transcript || '')).trim();
+      } else {
+        text = (await res.text()).trim();
+      }
+      if(text) appendTranscript('user', text);
+    }catch(err){
+      appendTranscript('asst', `ASR błąd sieci: ${err.message || err}`);
     }
   };
-  mediaRecorder.start();
+  mr.start(CHUNK_MS);
 }
-async function stopRecording(){
-  try{ mediaRecorder?.state === 'recording' && mediaRecorder.stop(); }catch{}
+function stopRecording(){
+  try{ if(mr && mr.state !== 'inactive') mr.stop(); }catch(_){}
+  if(stream){ stream.getTracks().forEach(t=>t.stop()); }
+  mr = null; stream = null; mime = null;
 }
 
-const logoBtn = document.getElementById('logoBtn');
-logoBtn.addEventListener('click', async ()=>{
-  isRecording = !isRecording;
-  logoBtn.classList.toggle('listening', isRecording);
-  if(isRecording){
-    addLine('Przełączanie nagrywania: OFF→ON');
-    speak('Nagrywanie włączone. Słucham.');
-    startRecording();
-  }else{
-    addLine('Przełączanie nagrywania: ON→OFF');
-    speak('Nagrywanie wyłączone.');
-    await stopRecording();
+/* ========== PODPIĘCIE KLIKÓW ==========
+   Jeśli MASZ już własne nasłuchiwanie klików na kropli — usuń ten blok.
+   Zostawiamy go jako bezpieczny fallback (jeden event 'pointerdown', bez dublowania).
+*/
+(function ensureLogoClicks(){
+  const zone = document.getElementById('logoBtn') || document.querySelector('.logo-zone');
+  if(!zone) return;
+  let last = 0;
+  function onToggle(e){
+    e.preventDefault(); e.stopPropagation();
+    const now = Date.now(); if(now - last < 500) return; last = now;
+    // jeśli masz własną obsługę, ten fallback nie przeszkodzi (jedynie doda .recording na body)
+    fallbackToggle();
   }
-});
+  zone.addEventListener('pointerdown', onToggle, {passive:false});
+  zone.addEventListener('keydown', (e)=>{ if(e.key==='Enter'||e.key===' ') onToggle(e); });
+})();
 
-window.addEventListener('DOMContentLoaded', ()=>{
-  speak('W celu złożenia zamówienia proszę nacisnąć logo. Po aktywacji trybu głosowego dopytam o szczegóły.');
-  addLine('Transkrypcja serwerowa aktywna. Kliknij logo, aby mówić.');
-});
+/* ========== DÓŁ – skróty (zostawiamy tylko log do transkrypcji) ========== */
+document.getElementById('btnFood')?.addEventListener('click', ()=>appendTranscript('user','Wybieram: Jedzenie.'));
+document.getElementById('btnTaxi')?.addEventListener('click', ()=>appendTranscript('user','Wybieram: Taxi.'));
+document.getElementById('btnHotel')?.addEventListener('click', ()=>appendTranscript('user','Wybieram: Hotel.'));
 </script>
 </body>
 </html>
